--- a/src/style.css
+++ b/src/style.css
@@ -12,12 +12,26 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-*{
+* {
   padding: 0;
   margin: 0;
 }
+body {
+  background: #f5f5f5;
+}
 
-#app,.el-container {
+#app,
+.el-container {
   height: 100vh;
   overflow: hidden;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
 }
